<resources>
    <string name="app_name">plotmilstd</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_exit">Exit</string>
    <string name="action_plotPoint">Plot Point</string>
    <string name="action_plot2units2525B">200 2525B Units</string>
    <string name="action_plotunits2525B">2525B Units</string>
    <string name="action_plotunits2525C">2525C Units</string>
    <string name="action_removeAll">Remove All</string>
    <string name="action_addWMS">Add WMS</string>
    <string name="action_removeWMS">Remove WMS</string>
    <string name="action_plotsymbol">Plot Symbol</string>
    <string name="action_iconsize">Icon Size</string>
    <string name="action_iconsizetiny">Tiny</string>
    <string name="action_iconsizesmall">Small</string>
    <string name="action_iconsizemedium">Medium</string>
    <string name="action_iconsizelarge">Large</string>

    <string name="cancelBtn">Cancel</string>
    <string name="saveBtn">Save</string>

    <!-- Feature Properties Dialog -->
    <string name="FPD_title">Feature Properties</string>
    <string name="FPD_featurename">Feature Name</string>

    <string name="FPD_symbolcodetextLabel">Symbol Code:</string>

    <string name="FPD_milstdversion">MilStd:</string>
    <string name="FPD_2525B">2525B</string>
    <string name="FPD_2525C">2525C</string>

    <string name="FPD_affiliationLabel">Affiliation:</string>

    <string name="FPD_echelonModifierLabel">Modifier:</string>
    <string name="FPD_echelonLabel">Echelon:</string>

    <string name="FPD_symbolcodeLabel">Symbol:</string>
    
    <!-- Help dialog box -->
    <string name="help_title">Help</string>
    <string name="help_ok_btn">Close</string>
    <string name="help_message">Tap on icon: select/deselect.\nDouble Tap on selected to edit.\nSelect and Pencil to edit.\nUnselect all and Pencil to draw.</string>
</resources>
