<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity" >
    <item android:id="@+id/action_plotPoint"
          android:title="@string/action_plotPoint"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_addWMS"
          android:title="@string/action_addWMS"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_removeWMS"
          android:title="@string/action_removeWMS"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_plotsymbol"
          android:title="@string/action_plotsymbol"
          android:orderInCategory="100"
          android:icon="@android:drawable/ic_menu_edit"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/action_plot2units2525B"
          android:title="@string/action_plot2units2525B"
          android:orderInCategory="100"
          android:icon="@android:drawable/ic_dialog_dialer"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/action_plotunits2525B"
          android:title="@string/action_plotunits2525B"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_plotunits2525C"
          android:title="@string/action_plotunits2525C"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_removeAll"
          android:title="@string/action_removeAll"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_iconsize"
          android:title="@string/action_iconsize"
          android:orderInCategory="100"
          app:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_iconsizetiny"
                  android:title="@string/action_iconsizetiny"
                  android:orderInCategory="100"
                  app:showAsAction="never" />
            <item android:id="@+id/action_iconsizesmall"
                  android:title="@string/action_iconsizesmall"
                  android:orderInCategory="100"
                  app:showAsAction="never" />
            <item android:id="@+id/action_iconsizemedium"
                  android:title="@string/action_iconsizemedium"
                  android:orderInCategory="100"
                  app:showAsAction="never" />
            <item android:id="@+id/action_iconsizelarge"
                  android:title="@string/action_iconsizelarge"
                  android:orderInCategory="100"
                  app:showAsAction="never" />
        </menu>
    </item>
    <item android:id="@+id/action_help"
          android:title="@string/action_help"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_exit"
          android:title="@string/action_exit"
          android:orderInCategory="100"
          app:showAsAction="never" />
</menu>
